--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <title>Scenario Decomposition Practice</title>
-    <link rel="icon" href="favicon.ico" sizes="any">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+   <!-- Basic favicon -->
+<link rel="icon" href="favicon_io/favicon.ico" sizes="any">
 
+<!-- PNG icons -->
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+
+<!-- Apple devices (iPhone, iPad) -->
+<link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+
+<!-- Optional: manifest (if generated) -->
+<link rel="manifest" href="favicon_io/site.webmanifest">
     <!-- Add Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -6603,4 +6610,5 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
