--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@
     </div>
     <!-- Login Panel -->
     <div id="login-panel" class="panel">
-        <h2>User Login🧑🏽‍💻</h2>
+        <h2>User Login</h2>
         
         <!-- Shift Selection -->
         <div class="shift-selection">
@@ -6573,3 +6573,4 @@ function prevSubmissionPage() {
     </script>
 </body>
 </html>
+
