--- a/index.html
+++ b/index.html
@@ -5609,6 +5609,8 @@
   { name: "Mahmoud Mohamed Nagep Mahmoud", flashNumber: "" },
   { name: "Ammar Mohamed Farouk Gamil", flashNumber: "" },
   { name: "mostafa tarek mohamed shehata", flashNumber: "" },
+  { name: "Ahmed Essam Allam Abd Elaziz", flashNumber: "" },
+  { name: "Mohamed attia attia mustafa ", flashNumber: "" },
   { name: "Ali Abdelwahed Hasan Eid", flashNumber: "" },
   { name: "kareem mohamed badr eldin elwan", flashNumber: "" },
   { name: "MOHAMED IBRAHIM MOHAMED", flashNumber: "" },
@@ -7277,3 +7279,4 @@ btnStay.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
